src/styles/globals.css
@font-face {
  font-family: 'SpaceRanger';
  src: url('../asset/space-ranger-font/SpaceRangerLaserItalic-J7an.otf')
    format('opentype');
}

@font-face {
  font-family: 'Halftone';
  src: url('../asset/space-ranger-font/SpaceRanger-EMJl.otf') format('opentype');
}

* {
  box-sizing: border-box;
}

a {
  text-decoration: none;
}

html,
body {
  margin: 0;
  padding: 0;
  font-family: Roboto, Fira Sans, Helvetica Neue, Arial, sans-serif;
  /* scroll-behavior: smooth; */
}

.title {
  width: 18.5rem;
  margin: 1.75rem auto 0;
  color: white;
  text-align: center;
  font-size: xx-large;
  font-family: 'SpaceRanger', Roboto, Arial, sans-serif;
  border-radius: 8px;
  background-color: #001e2e;
}

::-webkit-scrollbar {
  width: 0.5rem;
  height: 0.5rem;
}

::-webkit-scrollbar-thumb {
  border-radius: 1rem;
  background-color: darkgrey;
}

